--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bootstrap": "^4.5.3",
     "dotenv": "^8.2.0",
     "node-sass": "^5.0.0",
+    "oauth": "^0.9.15",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "the-noun-project": "^2.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
